refactor(timeline): 重构动画绑定引擎代码结构
- 提取参数映射逻辑到独立方法 getStringObjectMap()
- 移除不必要的 Collections 导入和 Collections.sort 调用
- 使用 Map.copyOf 替代手动创建不可变映射
- 简化条件判断逻辑和空值检查
- 优化循环遍历方式使用增强型 for 循环
- 移除冗余的 null 检查和默认值设置
- 统一代码风格和命名规范